crates/ars-core/tests/ui/component_part_non_root.rs
use ars_core::ComponentPart;

#[derive(ComponentPart)]
#[scope = "dialog"]
enum Part {
    Trigger,
    Root,
}

fn main() {}
